fix spacing issues

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -21,14 +21,14 @@
 
 .Weather .temperature {
 	position: relative;
-	top: -110px;
+	top: -100px;
 	left: 80px;
 	font-size: 64px;
 }
 
 .units {
 	position: relative;
-	top: -143px;
+	top: -133px;
 	left: 76px;
 	margin: 5px;
 }
